[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pgpigeon"
version = "1.0.0"
authors = [{ name = "Dinesh Kushwaha", email = "2kush.dinesh@gmail.com" }]
description = "This package help to implement realtime db notifications."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["python", "postgres", "realtime", "notification"]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["psycopg2==2.9.3"]

[tool.setuptools.packages.find]
where = ["src"]

# [tool.setuptools.package-data]
# pgpigeon = ["*.txt",".json"]

[project.scripts]
pigeon = "pgpigeon.pigeon_cli:startup"
pigeon-create-trigger = "pgpigeon.pigeon_cli:create_trigger"

[project.urls]
"Homepage" = "https://github.com/dinesh-kushwaha/pypigeon"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
